--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -93,7 +93,7 @@
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/instructionText"
-        app:boxStrokeColor="@color/selector"
+        app:boxStrokeColor="@color/selector_textfield_stroke"
         >
 
         <com.google.android.material.textfield.TextInputEditText
@@ -117,7 +117,7 @@
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/emailField"
-        app:boxStrokeColor="@color/selector"
+        app:boxStrokeColor="@color/selector_textfield_stroke"
         app:endIconMode="password_toggle"
         app:endIconTint="@color/white"
         >
@@ -142,7 +142,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginHorizontal="22dp"
         android:layout_marginBottom="32dp"
-        app:backgroundTint="@color/white"
+        app:backgroundTint="@color/button_selector"
         android:background="@drawable/rounded_button"
     />
 
