--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,19 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.LoginActivity"
-    android:background="@color/infinum_purple">
+    android:background="@color/infinum_purple"
+    tools:context=".ui.LoginActivity">
 
     <ImageView
         android:id="@+id/topIllustrationLeft"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/top_left_illustration"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         />
 
     <ImageView
@@ -21,8 +22,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/top_right_illustration"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         />
 
     <ImageView
@@ -39,112 +40,115 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="92dp"
+        android:layout_marginLeft="19dp"
         android:text="Shows"
         android:textColor="@color/white"
         android:textFontWeight="700"
-        android:layout_marginTop="92dp"
-        android:layout_marginLeft="19dp"
-        app:layout_constraintLeft_toRightOf="@+id/triangleIllustration"
-        app:layout_constraintTop_toBottomOf="@id/topIllustrationLeft"
         android:textSize="34sp"
         android:fontFamily="@font/roboto_regular"
+        app:layout_constraintLeft_toRightOf="@+id/triangleIllustration"
+        app:layout_constraintTop_toBottomOf="@id/topIllustrationLeft"
         />
 
     <TextView
         android:id="@+id/loginText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="154dp"
+        android:layout_marginLeft="24dp"
         android:text="Login"
         android:textColor="@color/white"
         android:textFontWeight="900"
-        android:layout_marginTop="154dp"
-        android:layout_marginLeft="24dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/triangleIllustration"
         android:textSize="34sp"
         android:fontFamily="@font/roboto_regular"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/triangleIllustration"
         />
-
 
     <TextView
         android:id="@+id/instructionText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_marginLeft="24dp"
         android:text="In order to continue please log in."
         android:textColor="@color/white"
         android:textFontWeight="400"
-        android:layout_marginTop="16dp"
-        android:layout_marginLeft="24dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/loginText"
         android:textSize="17sp"
         android:fontFamily="@font/roboto_regular"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/loginText"
         />
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/emailField"
+        android:id="@+id/emailFieldLayout"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="342dp"
         android:layout_height="56dp"
         android:layout_marginLeft="24dp"
         android:layout_marginTop="26dp"
         android:hint="Email"
-        app:hintTextColor="@color/white"
         android:textColorHint="@color/white"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        app:boxStrokeColor="@color/selector_textfield_stroke"
+        app:hintTextColor="@color/white"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/instructionText"
-        app:boxStrokeColor="@color/selector_textfield_stroke"
         >
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/emailField"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:text=""
             android:textColor="@color/white"
             android:textSize="16sp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:inputType="textEmailAddress"
+            android:imeOptions="actionDone"
             />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/passwordField"
+        android:id="@+id/passwordFieldLayout"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="342dp"
         android:layout_height="56dp"
         android:layout_marginLeft="24dp"
         android:layout_marginTop="24dp"
         android:hint="Password"
-        app:hintTextColor="@color/white"
         android:textColorHint="@color/white"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/emailField"
         app:boxStrokeColor="@color/selector_textfield_stroke"
         app:endIconMode="password_toggle"
         app:endIconTint="@color/white"
+        app:hintTextColor="@color/white"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/emailFieldLayout"
         >
 
         <com.google.android.material.textfield.TextInputEditText
-            android:textColor="@color/white"
-            android:textSize="16sp"
+            android:id="@+id/passwordField"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textColor="@color/white"
+            android:textSize="16sp"
             android:inputType="textPassword"
             />
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
-        android:id="@+id/textButton"
+        android:id="@+id/loginButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="22dp"
+        android:layout_marginBottom="32dp"
         android:text="Login"
         android:textFontWeight="700"
         android:fontFamily="@font/roboto_regular"
         android:textColor="@color/infinum_purple"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginHorizontal="22dp"
-        android:layout_marginBottom="32dp"
-        app:backgroundTint="@color/button_selector"
         android:background="@drawable/rounded_button"
-    />
-
+        app:backgroundTint="@color/button_selector"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:enabled="false"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
