Add email and password input field error text
Refactor LoginActivity.kt for better code readability and add error text display
functionality.

Add functionality to the password error icon to hide the error on click
so that the user has the ability to toggle password display and have an easier
time applying displayed password rules to his password

Refactor activity_login.xml and add xml resources to allow for mentioned changes.

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -31,7 +31,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="95dp"
-        android:layout_marginLeft="56dp"
+        android:layout_marginStart="56dp"
         android:src="@drawable/triangle"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/topIllustrationLeft"
@@ -41,8 +41,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="92dp"
-        android:layout_marginLeft="19dp"
-        android:text="Shows"
+        android:layout_marginStart="19dp"
+        android:text="@string/app_name"
         android:textColor="@color/white"
         android:textFontWeight="700"
         android:textSize="34sp"
@@ -56,8 +56,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="154dp"
-        android:layout_marginLeft="24dp"
-        android:text="Login"
+        android:layout_marginStart="24dp"
+        android:text="@string/login_activity_name"
         android:textColor="@color/white"
         android:textFontWeight="900"
         android:textSize="34sp"
@@ -71,8 +71,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:layout_marginLeft="24dp"
-        android:text="In order to continue please log in."
+        android:layout_marginStart="24dp"
+        android:text="@string/login_instruction"
         android:textColor="@color/white"
         android:textFontWeight="400"
         android:textSize="17sp"
@@ -85,10 +85,10 @@
         android:id="@+id/emailFieldLayout"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="342dp"
-        android:layout_height="56dp"
-        android:layout_marginLeft="24dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="26dp"
-        android:hint="Email"
+        android:hint="@string/email_text"
         android:textColorHint="@color/white"
         app:boxStrokeColor="@color/selector_textfield_stroke"
         app:hintTextColor="@color/white"
@@ -100,7 +100,6 @@
             android:id="@+id/emailField"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text=""
             android:textColor="@color/white"
             android:textSize="16sp"
             android:inputType="textEmailAddress"
@@ -112,10 +111,10 @@
         android:id="@+id/passwordFieldLayout"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="342dp"
-        android:layout_height="56dp"
-        android:layout_marginLeft="24dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="24dp"
-        android:hint="Password"
+        android:hint="@string/password_text"
         android:textColorHint="@color/white"
         app:boxStrokeColor="@color/selector_textfield_stroke"
         app:endIconMode="password_toggle"
@@ -132,6 +131,7 @@
             android:textColor="@color/white"
             android:textSize="16sp"
             android:inputType="textPassword"
+            android:imeOptions="actionDone"
             />
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -141,7 +141,7 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="22dp"
         android:layout_marginBottom="32dp"
-        android:text="Login"
+        android:text="@string/login"
         android:textFontWeight="700"
         android:fontFamily="@font/roboto_regular"
         android:textColor="@color/infinum_purple"
