--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -15,6 +15,7 @@
         android:src="@drawable/top_left_illustration"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        android:contentDescription="@string/top_left_illustration"
         />
 
     <ImageView
@@ -24,6 +25,7 @@
         android:src="@drawable/top_right_illustration"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        android:contentDescription="rig"
         />
 
     <ImageView
@@ -55,7 +57,7 @@
         android:id="@+id/loginText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="154dp"
+        android:layout_marginTop="132dp"
         android:layout_marginStart="24dp"
         android:text="@string/login_activity_name"
         android:textColor="@color/white"
