--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -25,7 +25,7 @@
         android:src="@drawable/top_right_illustration"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:contentDescription="rig"
+        android:contentDescription="@string/top_right_illustration"
         />
 
     <ImageView
@@ -37,6 +37,7 @@
         android:src="@drawable/triangle"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/topIllustrationLeft"
+        android:contentDescription="@string/play_button"
         />
 
     <TextView
