Implement show details activity
Add UI for the show detail activity, add dummy review writing functionality,
add dialog for review adding confirmation

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="gray">#BBBBBB</color>
     <color name="error_text_color">#FF0000</color>
+    <color name="review_button_color">#52368C</color>
 </resources>
