--- a/app/src/main/res/layout/activity_shows.xml
+++ b/app/src/main/res/layout/activity_shows.xml
@@ -74,5 +74,11 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         />
+    <androidx.constraintlayout.widget.Group
+        android:id="@+id/no_shows_display"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:constraint_referenced_ids="empty_state, message"
+        android:visibility="gone"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
