--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,8 +8,8 @@
 
     <style name="CustomRatingBarStyle" parent="Widget.AppCompat.RatingBar">
         <item name="android:progressDrawable">@drawable/custom_rating_bar</item>
-        <item name="android:minHeight">15dip</item>
-        <item name="android:maxHeight">47dip</item>
+        <item name="android:minHeight">15dp</item>
+        <item name="android:maxHeight">47dp</item>
     </style>
 
     <style name="ReviewButton">
