--- a/app/src/main/res/layout/fragment_shows.xml
+++ b/app/src/main/res/layout/fragment_shows.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -6,8 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/white"
-    tools:context=".ui.ShowsActivity">
+    android:background="@color/white">
 
     <TextView
         android:id="@+id/title"
@@ -70,10 +68,31 @@
         android:text="@string/no_shows"
         android:textSize="16sp"
         app:cornerRadius="16dp"
+        android:textAllCaps="false"
+        app:backgroundTint="@color/purple_color"
+        android:textColor="@color/white"
+        app:layout_constraintBottom_toTopOf="@id/logout_button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/logout_button"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="40dp"
+        android:layout_marginVertical="8dp"
+        android:text="@string/logout"
+        android:textSize="16sp"
+        android:textColor="@color/white"
+        android:textAllCaps="false"
+        app:backgroundTint="@color/purple_color"
+        app:cornerRadius="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         />
+
     <androidx.constraintlayout.widget.Group
         android:id="@+id/no_shows_display"
         android:layout_width="wrap_content"
