--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="gray">#BBBBBB</color>
     <color name="error_text_color">#FF0000</color>
     <color name="review_button_color">#52368C</color>
+    <color name="purple_color">#52368C</color>
 </resources>
