--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,6 +12,11 @@
         <item name="android:maxHeight">47dp</item>
     </style>
 
+    <style name="addReviewRatingBar" parent="Widget.AppCompat.RatingBar">
+        <item name="colorControlNormal">@color/purple_color</item>
+        <item name="colorControlActivated">@color/purple_color</item>
+    </style>
+
     <style name="ReviewButton">
         <item name="cornerRadius">32dp</item>
         <item name="android:backgroundTint">@color/review_button_color</item>
