--- a/app/src/main/res/layout/fragment_shows.xml
+++ b/app/src/main/res/layout/fragment_shows.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -67,10 +68,10 @@
         android:layout_marginVertical="8dp"
         android:text="@string/no_shows"
         android:textSize="16sp"
-        app:cornerRadius="16dp"
         android:textAllCaps="false"
-        app:backgroundTint="@color/purple_color"
         android:textColor="@color/white"
+        app:backgroundTint="@color/purple_color"
+        app:cornerRadius="16dp"
         app:layout_constraintBottom_toTopOf="@id/logout_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -97,7 +98,7 @@
         android:id="@+id/no_shows_display"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:constraint_referenced_ids="empty_state, message"
-        android:visibility="gone"/>
+        android:visibility="gone"
+        app:constraint_referenced_ids="empty_state, message"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
