--- a/app/src/main/res/layout/review_card.xml
+++ b/app/src/main/res/layout/review_card.xml
@@ -13,7 +13,7 @@
         android:id="@+id/profile_picture"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="@dimen/size16dp"
         android:layout_marginStart="24dp"
         android:src="@drawable/ic_profile_placeholder"
         android:contentDescription="@string/profile_picture"
@@ -25,8 +25,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        android:layout_marginStart="16dp"
-        android:textSize="16sp"
+        android:layout_marginStart="@dimen/size16dp"
+        android:textSize="@dimen/text16sp"
         android:textColor="@color/infinum_purple"
         app:layout_constraintStart_toEndOf="@id/profile_picture"
         app:layout_constraintTop_toTopOf="parent"
@@ -38,7 +38,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        android:textSize="16sp"
+        android:textSize="@dimen/text16sp"
         android:textColor="@color/infinum_purple"
         app:layout_constraintEnd_toStartOf="@id/ic_star"
         app:layout_constraintTop_toTopOf="parent"
@@ -48,7 +48,7 @@
     <ImageView
         android:id="@+id/ic_star"
         android:layout_width="wrap_content"
-        android:layout_height="16dp"
+        android:layout_height="@dimen/size16dp"
         android:layout_marginTop="34dp"
         android:layout_marginEnd="24dp"
         android:src="@drawable/star_full"
@@ -60,10 +60,10 @@
         android:id="@+id/review_comment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="@dimen/size16dp"
         android:layout_marginHorizontal="24dp"
         android:textColor="@color/black"
-        android:textSize="16sp"
+        android:textSize="@dimen/text16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/profile_picture"
