--- a/app/src/main/res/layout/fragment_shows.xml
+++ b/app/src/main/res/layout/fragment_shows.xml
@@ -7,7 +7,6 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@color/white">
-
     <TextView
         android:id="@+id/title"
         android:layout_width="wrap_content"
@@ -21,6 +20,16 @@
         android:textColor="@color/black"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
+
+    <ImageView
+        android:id="@+id/logout_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:src="@drawable/logout_img"
+        android:layout_marginTop="@dimen/margin_8"
+        android:layout_marginEnd="@dimen/margin_8"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view"
@@ -65,30 +74,13 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="40dp"
-        android:layout_marginVertical="8dp"
+        android:layout_marginVertical="@dimen/margin_8"
         android:text="@string/no_shows"
-        android:textSize="16sp"
+        android:textSize="@dimen/text16sp"
         android:textAllCaps="false"
         android:textColor="@color/white"
         app:backgroundTint="@color/purple_color"
-        app:cornerRadius="16dp"
-        app:layout_constraintBottom_toTopOf="@id/logout_button"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        />
-
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/logout_button"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="40dp"
-        android:layout_marginVertical="8dp"
-        android:text="@string/logout"
-        android:textSize="16sp"
-        android:textColor="@color/white"
-        android:textAllCaps="false"
-        app:backgroundTint="@color/purple_color"
-        app:cornerRadius="16dp"
+        app:cornerRadius="@dimen/size16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
