--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -64,7 +64,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="125dp"
-            android:layout_marginStart="24dp"
+            android:layout_marginStart="@dimen/margin_24dp"
             android:text="@string/login_activity_name"
             android:textColor="@color/white"
             android:textStyle="bold"
@@ -78,10 +78,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/size16dp"
-            android:layout_marginStart="24dp"
+            android:layout_marginStart="@dimen/margin_24dp"
             android:text="@string/login_instruction"
             android:textColor="@color/white"
-            android:textSize="17sp"
+            android:textSize="@dimen/text16sp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@id/loginText"
             />
@@ -91,7 +91,7 @@
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="24dp"
+            android:layout_marginHorizontal="@dimen/margin_24dp"
             android:layout_marginTop="26dp"
             android:hint="@string/email_text"
             android:textColorHint="@color/white"
@@ -118,8 +118,8 @@
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="24dp"
-            android:layout_marginTop="24dp"
+            android:layout_marginHorizontal="@dimen/margin_24dp"
+            android:layout_marginTop="@dimen/margin_24dp"
             android:hint="@string/password_text"
             android:textColorHint="@color/white"
             app:boxStrokeColor="@color/selector_textfield_stroke"
@@ -143,6 +143,20 @@
                 />
         </com.google.android.material.textfield.TextInputLayout>
 
+        <CheckBox
+            android:id="@+id/remember_me_checkbox"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/passwordFieldLayout"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginHorizontal="@dimen/margin_24dp"
+            android:layout_marginTop="@dimen/margin_8"
+            android:text="@string/remember_me"
+            android:textColor="@color/white"
+            android:textSize="@dimen/text16sp"
+            style="@style/Widget.App.CheckBox"
+            />
+
         <Button
             android:id="@+id/loginButton"
             android:layout_width="0dp"
@@ -159,7 +173,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/passwordFieldLayout"
+            app:layout_constraintTop_toBottomOf="@id/remember_me_checkbox"
             />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
