--- a/app/src/main/res/navigation/shows_nav_graph.xml
+++ b/app/src/main/res/navigation/shows_nav_graph.xml
@@ -12,7 +12,9 @@
             android:id="@+id/actionLoginFragmentToShowsFragment"
             app:destination="@id/showsFragment"
             app:enterAnim="@android:anim/slide_in_left"
-            app:exitAnim="@android:anim/slide_out_right"/>
+            app:exitAnim="@android:anim/slide_out_right"
+            app:popUpTo="@id/loginFragment"
+            app:popUpToInclusive="true"/>
     </fragment>
     <fragment
         android:id="@+id/showsFragment"
@@ -23,7 +25,7 @@
             app:destination="@id/loginFragment"
             app:enterAnim="@android:anim/slide_in_left"
             app:exitAnim="@android:anim/slide_out_right"
-            app:popUpTo="@id/loginFragment"
+            app:popUpTo="@id/showsFragment"
             app:popUpToInclusive="true"/>
         <action
             android:id="@+id/actionShowsFragmentToShowDetailsFragment"
