--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -21,5 +21,8 @@
         <item name="cornerRadius">32dp</item>
         <item name="android:backgroundTint">@color/review_button_color</item>
     </style>
+    <style name="Widget.App.CheckBox" parent="Widget.MaterialComponents.CompoundButton.CheckBox">
+        <item name="buttonTint">@color/button_tint</item>
+    </style>
 
 </resources>
