--- a/app/src/main/res/layout/dialog_profile.xml
+++ b/app/src/main/res/layout/dialog_profile.xml
@@ -32,6 +32,7 @@
                 android:layout_height="match_parent"
                 android:src="@drawable/ic_profile_placeholder"
                 android:layout_gravity="center"
+                android:scaleType="centerCrop"
                 />
 
         </com.google.android.material.card.MaterialCardView>
