Implement view model
Refactor code, a lot had to be adjusted for the code to be more readable
and work with observers at the same time.
Move show list and reviews map to respective viewModels.

Adjust the way showsFragment gets the data for email and password. It is
no longer taken from preferences and is now transferred using safe args.
The oversight was that nothing is saved to user preferences if the user
does not check remember me.

--- a/app/src/main/res/navigation/shows_nav_graph.xml
+++ b/app/src/main/res/navigation/shows_nav_graph.xml
@@ -32,6 +32,12 @@
             app:destination="@id/showDetailsFragment"
             app:enterAnim="@android:anim/fade_in"
             app:exitAnim="@android:anim/fade_out"/>
+        <argument
+            android:name="email"
+            app:argType="string"/>
+        <argument
+            android:name="password"
+            app:argType="string"/>
     </fragment>
     <fragment
         android:id="@+id/showDetailsFragment"
